[project]
name = "analyzing-bank-transaction"
version = "0.1.0"
description = ""
authors = [
    {name = "Azat Khaliullin",email = "AllisonUno@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas-stubs (>=2.3.0.250703,<3.0.0.0)",
    "types-requests (>=2.32.4.20250611,<3.0.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "analyzing_bank_transaction", from = "src"}]


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.16.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
requests = "^2.32.4"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = """ \\.git """

[tool.isort]
line_length = 119
